--- a/docs/learn/Escape Hatches/referencing-values-with-refs.mdx
+++ b/docs/learn/Escape Hatches/referencing-values-with-refs.mdx
@@ -181,22 +181,99 @@ JSX의 `ref` 속성에 ref를 넘겨줄 때, `<div ref={myRef}>`와 같이, Reac
 - 상태와 달리, ref의 `current` 값을 변경하는 것은 리렌더링을 유발하지 않습니다.
 - 렌더링 동안 `ref.current`를 읽거나 쓰지 마세요. 이는 컴포넌트를 더 예측하기 어렵게 만듭니다.
 
+:::note  문제에 도전해보세요
 
+## 1. 고장난 채팅 입력을 고치세요
 
+메시지를 입력하고 "보내기" 버튼을 클릭하세요. "보냈다!" 창을 보기 전에 3초의 지연이 있다는 것을 볼 수 있습니다.
+이 지연동안 "취소하기" 버튼을 볼 수 있습니다. 이 "취소하기" 버튼은 "보냈다!" 메시지가 나타나는 것을 막기 위한 용도입니다.
+`handleSend` 동안 저장한 timeout ID에 대해 [`clearTimeout`](https://developer.mozilla.org/en-US/docs/Web/API/clearTimeout)을 부르면서 작동합니다.
+하지만, "취소하기"가 클릭된 후에도 "보냈다!" 메시지는 여전히 나타납니다. 작동하지 않는 이유를 찾아내서 고치세요.
 
+<Code src="https://codesandbox.io/s/470l0z?file=%2FApp.js&utm_medium=sandpack" />
 
+### 힌트
 
+`let timeoutID`와 같은 일반적인 변수들은 리렌더링 사이에 "살아남지" 못합니다. 매 렌더링마다 컴포넌트를 밑바닥부터 다시 실행시키면서 컴포넌트의 변수들을 초기화 시키기 때문입니다.
+timeout ID를 다른 어딘가에 저장해 두어야 하지 않을까요?
 
+### 정답
 
+컴포넌트가 리렌더링 할 때마다 모든 지역 변수들은 완전히 초기화되어집니다. 
+`timeoutID`와 같은 지역 변수 속 timeout ID를 지키지 못했던 이유이며 미래에 또다른 이벤트 핸들러가 timeout ID를 "보기"를 기대한 이유입니다. 
+대신에, React가 렌더 사이에 값을 저장해두는 ref에 timeout ID를 저장하세요.
 
+<Code src="https://codesandbox.io/s/3u5ioz?file=%2FApp.js&utm_medium=sandpack" />
 
+## 2. 컴포넌트가 리렌더링에 실패하는 것을 수정하세요
 
+이 버튼은 "켜기"와 "끄기"를 보여주는 토글입니다. 하지만, 이 버튼은 항상 "끄기"만을 보여줍니다.
+이 코드에 무슨 문제가 있나요? 고쳐보세요.
 
+<Code src="https://codesandbox.io/s/5mdcs0?file=%2FApp.js&utm_medium=sandpack" />
 
+### 정답
 
+이 예시에서, ref의 현재 값은 렌더링 결과물을 계산하는데 사용되었습니다(`{isOnRef.current ? 'On' : 'Off'}`).
+이 정보가 ref에 있어서 안된다는 신호이며 정보는 상태에 넣어져야 합니다.
+이를 고치기 위해서 ref를 제거하고 대신에 상태를 사용하세요.
 
+<Code src="https://codesandbox.io/s/crvwdb?file=%2FApp.js&utm_medium=sandpack" />
 
+## 3. 디바운싱 고치기
 
+이 예시에서, 모든 버튼 클릭 핸들러들은 ["디바운싱"](https://redd.one/blog/debounce-vs-throttle)됩니다.
+디바운싱이 무엇인지 알기 위해, 버튼 중 하나를 눌러보세요.
+1초 후 메시지가 어떻게 나타나는지 보세요.
+메시지를 기다리는 동안 버튼을 누르면, 타이머가 초기화됩니다.
+그래서 만약 여러분이 빠르게 여러번 같은 버튼을 누르면 메시지는 클릭을 멈춘 뒤 일초 *후*에 나타납니다.
+디바운싱은 여러분이 사용자가 "행동하는 것을 멈출" 때까지 행동에 대한 액션을 지연시키는 것입니다.
 
+이 예시는 동작하지만 의도된 대로 잘 동작하지는 않습니다. 버튼들은 독립적이지 않습니다.
+문제를 보면, 버튼 중 하나를 클릭하고 즉시 또다른 버튼을 클릭하세요.
+약간의 지연 후 두 버튼 모두의 메시지를 보기를 기대했을 것입니다.
+하지만 마지막 버튼의 메시지만 나타납니다. 첫번째 버튼의 메시지는 나오지 않습니다.
 
+왜 버튼이 서로 방해할까요? 찾아서 문제를 고쳐보세요.
 
+<Code src="https://codesandbox.io/s/xjm60d?file=%2FApp.js&utm_medium=sandpack" />
+
+### 힌트
+
+마지막 timeout ID는 모든 `DebouncedButton` 컴포넌트들 사이에 공유됩니다.
+이것이 버튼을 클릭하면 또다른 버튼의 timeout을 초기화시키는 이유입니다.
+각각의 버튼에 대한 timeout ID를 분리해서 저장할 수 있나요?
+
+### 정답
+
+`timeoutID`와 같은 변수가 모든 컴포넌트 사이에 공유되고 있습니다.
+이것이 두번째 버튼을 클릭하면 첫번째 버튼의 timeout을 초기화시키는 이유입니다.
+이를 고치기 위해, timeout을 ref에 저장할 수 있습니다.
+각각의 버튼은 각자의 ref를 가지고 있음으로서 그 버튼들은 서로 충돌하지 않습니다.
+두 버튼을 얼마나 빨리 클릭하든 두 메시지들은 모두 보여질 것입니다.
+
+<Code src="https://codesandbox.io/s/14lyv8?file=%2FApp.js&utm_medium=sandpack" />
+
+## 4. 최신 상태를 읽기
+
+이 예시에서 "보내기" 버튼을 누른 후 메시지가 보여지기 전 약간의 지연이 있습니다.
+"hello"를 입력하고 보내기 버튼을 누른 후 빠르게 입력을 다시 수정합니다.
+여러분의 수정에도 불구하고, 얼럿창은 "hello"(버튼이 클릭된 [때](https://beta.reactjs.org/learn/state-as-a-snapshot#state-over-time)의 상태값)를 보여줄 것입니다. 
+
+보통, 이 행동은 앱에서 여러분이 원하는 행위입니다.
+하지만, *가장 최신* 상태를 읽는 비동기적인 코드를 원하는 경우들이 가끔 있을지도 모릅니다.
+클릭 했을 때의 문자가 아닌 *현재* 입력 문구를 얼럿창에 보여주는 방법을 생각할 수 있나요?
+
+<Code src="https://codesandbox.io/s/jsmoh6?file=%2FApp.js&utm_medium=sandpack" />
+
+### 정답
+
+상태는 [스냅샷](https://beta.reactjs.org/learn/state-as-a-snapshot)과 같이 작동하므로 timeout과 같이 비동기적인 작동으로 최근 상태값을 읽을 수 없습니다.
+하지만, 가장 최신의 입력 문구를 ref에 저장할 수 있습니다.
+ref는 수정 가능하므로 언제든 `current` 특징을 읽을 수 있습니다. 
+이 예시에서 최신 문구가 렌더링동안 사용되기 때문에, 상태변수(렌더링을 위해)와 ref(timeout 동안 문구를 읽기 위해) 둘 다 필요합니다.
+여러분은 수동으로 최신 ref 값을 업데이트할 필요가 있습니다.
+
+<Code src="https://codesandbox.io/s/6gk3ld?file=%2FApp.js&utm_medium=sandpack" />
+
+:::
