--- a/docs/learn/Managing State/preserving-and-resetting-state.mdx
+++ b/docs/learn/Managing State/preserving-and-resetting-state.mdx
@@ -5,7 +5,7 @@ import { CenterImage } from "../../../src/components/CenterImage/CenterImage"; i
 
 # 상태를 유지하고 재설정하는 방법
 
-상태는 컴포넌트에 담긴 채로 격리되어 있습니다. React는 UI 트리에 기반해 어떤 상태가 어떤 컴포넌트의 것인지를 끊임 없이 추적합니다.
+상태는 컴포넌트에 담긴 채로 격리되어 있습니다. React는 UI 트리 내부의 자신의 위치에  기반해 어떤 상태가 어떤 컴포넌트의 것인지를 끊임 없이 추적합니다.
 리렌더링이 일어나는 동안, 여러분은 상태를 유지하거나 초기화하는 등의 조작을 할 수 있습니다.
 
 :::info 여러분이 배울 것
