--- a/docs/learn/Managing State/choosing-the-state-structure.mdx
+++ b/docs/learn/Managing State/choosing-the-state-structure.mdx
@@ -49,7 +49,7 @@ const [position, setPosition] = useState({ x: 0, y: 0 });
 기술적으로 어떤 접근법을 사용해도 됩니다. **두 상태 변수들이 항상 함께 변경된다면, 하나의 상태 변수로 상태들을 통합하는 것이 좋은 생각으로 보입니다.**
 그러면 항상 상태들을 동기화하는 것을 놓치지 않을 것입니다. 커서를 옮기는 것이 빨간 점의 좌표 모두를 업데이트하는 아래 예시처럼 말입니다.
 
-<Code src="https://codesandbox.io/s/13x7mv?file=%2FApp.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/13x7mv?file=%2FApp.js&utm_medium=sandpack" />
 
 객체 또는 배열에 데이터를 모으는 또다른 경우는 얼마나 많은 상태들이 필요한지 잘 모를 때입니다.
 예를 들어, 사용자가 맞춤 필드를 사용자가 추가할 수 있는 폼이 있을 때 도움이 됩니다.
@@ -64,7 +64,7 @@ const [position, setPosition] = useState({ x: 0, y: 0 });
 
 여기 `isSending`과 `isSent` 상태 변수들로 이루어진 호텔 피드백 폼이 있습니다.
 
-<Code src="https://codesandbox.io/s/pkwdmp?file=/App.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/pkwdmp?file=/App.js&utm_medium=sandpack" />
 
 이 코드는 작동하지만, 
 `setIsSent`와 `setIsSending`을 함꼐 부르는 것을 잊었다면, `isSending`과 `isSent`가 동시에 `true`인 상황에 놓여져 있을지도 모릅니다.
@@ -72,7 +72,7 @@ const [position, setPosition] = useState({ x: 0, y: 0 });
 
 **`isSending`과 `isSent`가 동시에 `true`가 되면 절대 안되기 때문에, 하나의 `status` 상태 변수로 상태들을 교체하는 게 더 좋습니다. `status` 상태 변수는 `typing`(기본값), `sending`, `sent` ~세가지~ 상태들 중 하나를 가질 수 있습니다.**
 
-<Code src="https://codesandbox.io/s/ue8v0i?file=/App.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/ue8v0i?file=/App.js&utm_medium=sandpack" />
 
 가독성을 위해 몇 개의 상수들을 선언할 수 있습니다:
 
@@ -89,7 +89,7 @@ const isSent = status === 'sent';
 
 예를 들어, 아래 폼을 보세요. 작동하지만 폼 안에서 불필요한 상태를 찾을 수 있습니까?
 
-<Code src="https://codesandbox.io/s/3w14pb?file=%2FApp.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/3w14pb?file=%2FApp.js&utm_medium=sandpack" />
 
 위의 폼은 `firstName`, `lastName`, `fullName` 세 가지 상태 변수들을 가지고 있습니다.
 하지만, `fullName`은 불필요합니다.
@@ -97,7 +97,7 @@ const isSent = status === 'sent';
 
 아래 코드가 올바른 방식을 적용한 방법입니다:
 
-<Code src="https://codesandbox.io/s/b8ive6?file=%2FApp.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/b8ive6?file=%2FApp.js&utm_medium=sandpack" />
 
 `fullName`은 상태 변수가 *아닙니다.*
 대신에, 렌더링 동안 계산되어집니다:
@@ -154,7 +154,7 @@ function Message({ initialColor }) {
 
 아래 메뉴 목록 컴포넌트는 여러 개 중 하나의 여행용 과자를 선택하도록 합니다.
 
-<Code src="https://codesandbox.io/s/3ll5lu?file=%2FApp.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/3ll5lu?file=%2FApp.js&utm_medium=sandpack" />
 
 현재, `selectedItem` 상태 변수 속에 객체로 선택된 아이템을 저장하고 있습니다.
 하지만, 이것은 좋지 않습니다: **`selectedItem`의 내용이 `items` 목록 내부의 아이템들 중 하나와 같은 객체이기 때문입니다.**
@@ -162,7 +162,7 @@ function Message({ initialColor }) {
 
 왜 이것이 문제일까요? 각 아이템이 수정가능하도록 만들어봅시다:
 
-<Code src="https://codesandbox.io/s/bnggym?file=/App.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/bnggym?file=/App.js&utm_medium=sandpack" />
 
 목록의 "선택"을 처음 누르고나서 아이템을 수정한다면, **입력값이 업데이트되지만 아래에 있는 값은 해당 수정사항을 반영하지 못하는 것을 볼 수 있습니다.**
 이는 중복된 상태를 가지고 있어 `selectedItem`을 업데이트하는 것을 잊었기 때문입니다.
@@ -170,7 +170,7 @@ function Message({ initialColor }) {
 `selectedItem`도 업데이트할 수 있지만, 더 쉬운 수정은 중복을 제거하는 것입니다.
 이 예시에서는 `selectedItem` 객체(`items` 내부의 객체와 중복을 가짐) 대신에 상태에 `selectedId`를 가지고 그 ID로 아이템 목록인 `items`에서 `selectedItem`을 찾을 수 있습니다.
 
-<Code src="https://codesandbox.io/s/5b25vk?file=/App.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/5b25vk?file=/App.js&utm_medium=sandpack" />
 
 (다른 방법으로는 상태로 선택된 인덱스를 가질 수 있습니다.)
 
@@ -196,7 +196,7 @@ function Message({ initialColor }) {
 행성, 대륙 그리고 나라로 이루어진 여행 계획을 상상해봅니다.
 아래 예시와 같이, 중첩된 객체와 배열을 사용해 상태를 구조화하려 시도할지도 모릅니다.
 
-<Code src="https://codesandbox.io/s/1n8twj?file=%2Fplaces.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/1n8twj?file=%2Fplaces.js&utm_medium=sandpack" />
 
 이제 여러분이 이미 방문했던 장소를 지우는 버튼을 추가하기를 원한다고 가정해봅시다.
 어떻게 이 요건을 만족시킬 건가요?
@@ -211,7 +211,7 @@ function Message({ initialColor }) {
 
 아래에 재구조화된 데이터는 데이터베이스 table처럼 보여질지도 모릅니다:
 
-<Code src="https://codesandbox.io/s/cdkq4k?file=%2Fplaces.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/cdkq4k?file=%2Fplaces.js&utm_medium=sandpack" />
 
 **이제 상태는 "평평"하고(또는 "정규화"되었고) 중첩된 아이템들을 더 쉽게 업데이트할 수 있게 되었습니다.**
 
@@ -222,7 +222,7 @@ function Message({ initialColor }) {
 
 아래에 올바른 방식의 예제가 있습니다:
 
-<Code src="https://codesandbox.io/s/qf818i?file=%2FApp.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/qf818i?file=%2FApp.js&utm_medium=sandpack" />
 
 원하는 만큼 상태를 중첩할 수 있지만, "평평"하게 상태를 만드는 것은 많은 문제들을 해결할 수 있습니다.
 상태를 더 쉽게 업데이트하는 것이 가능하지만, 중첩된 객체의 다른 부분에서 중복을 피할 수 있게 도와줍니다.
@@ -234,7 +234,7 @@ function Message({ initialColor }) {
 이상적으로, 여러분은 메모리 사용성을 향상시키기 위해 "table" 객체에서 제거된 아이템(그리고 그 자식도!)을 삭제하고 싶어할 수 있습니다.
 아래 버전에 반영되어 있습니다.
 업데이트 로직을 보다 간결하게 만들기 위해 [Immer를 사용](https://beta.reactjs.org/learn/updating-objects-in-state#write-concise-update-logic-with-immer)합니다.
-<Code src="https://codesandbox.io/s/zim79i?file=/App.js&utm_medium=sandpack">
+<Code src="https://codesandbox.io/s/zim79i?file=/App.js&utm_medium=sandpack" />
 :::
 
 가끔, 자식 컴포넌트로 중첩된 상태의 일부를 이동시킴으로서 상태 중첩을 줄일 수 있습니다.
