--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -271,7 +271,7 @@ const [tasks, dispatch] = useReducer(tasksReducer, initialTasks);
 
 `useReducer` 훅은 두개의 인자를 받습니다:
 
-1. 하나의 reducer 함수
+1. reducer 함수
 2. 하나의 초기 상태
 
 이제 완전히 이어졌습니다! 여기서 reducer는 컴포넌트 파일의 아래에 선언되어있습니다:
