--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -236,7 +236,7 @@ const sum = arr.reduce(
  ```
 
 `reduce`를 통해 전달한 함수는 "reducer"로 알려져 잇습니다. 이 함수는 이 때까지의 _결과_와 _현재 요소_를 받고나서 _다음 결과_를 리턴해줍니다. React의 reducer 또한 같은 생각의 한 예입니다: 
-_이 때까지의 상태_를 받고 _다음 결과_를 리턴해줍니다. 이러한 방법으로, 상태에 action들을 축적합니다.
+_이 때까지의 상태_를와 _액션_을 받고 _다음 결과_를 리턴해줍니다. 이러한 방법으로, 상태에 action들을 축적합니다.
 
 심지어 reducer 함수에 넘겨서 최종 상태를 계산하기 위해 `initialState`와 `action`들의 배열로 `reduce()` 메소드를 사용할 수 있습니다:
 
