--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -19,8 +19,8 @@ import {BlockQuote} from "../../../src/components/BlockQuote";
 
 <Code src="https://codesandbox.io/s/yrv1mz?file=/App.js&utm_medium=sandpack"/>
 
-각각의 이벤트 핸들러들은 상태를 업데이트하기 위해 `setTasks`를 부릅니다. 컴포넌트가 커질 수록, 컴포넌트 전체에 뿌려져 있는 상태 로직의 양도 증가합니다. 
-복잡도를 줄이고 모든 로직을 모든 로직을 하나의 접근하기 편한 장소에 유지하기 위해서, **"reducer""라고 불리는 컴포넌트 밖의 하나의 함수에 상태 로직을 옮길 수 있습니다.
+각각의 이벤트 핸들러들은 상태를 업데이트하기 위해 `setTasks`를 부릅니다. 컴포넌트가 커질수록, 컴포넌트 전체에 뿌려져 있는 상태 로직의 양도 증가합니다. 
+복잡도를 줄이고 모든 로직을 하나의 접근하기 편한 장소에 유지하기 위해서, **"reducer""라고 불리는 컴포넌트 밖의 하나의 함수에 상태 로직을 옮길 수 있습니다.
 
 Reducer들은 상태를 관리하기 위한 다른 방법입니다. 세 가지 스텝들을 거쳐 `useState`에서 `useReducer`으로 변경할 수 있습니다. 
 
