--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -61,7 +61,7 @@ function handleDeleteTask(taskId) {
 }
 ```
 
-로직을 설정하는 모든 관계를 제거하세요. 남은 것은 세 개의 이벤트 핸들러입니다:
+로직을 설정하는 모든 상태를 제거하세요. 남은 것은 세 개의 이벤트 핸들러입니다:
 
 - `handleAddTask(text)`는 사용자가 "Add"를 누르면 호출됩니다.
 - `handleChangeTask(task)`는 사용자가 테스크를 올리거나 "Save"를 누르면 호출됩니다.
