--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -68,7 +68,7 @@ function handleDeleteTask(taskId) {
 - `handleDeleteTask(taskId)`는 사용자가 "Delete"을 누르면 호출됩니다.
 
 리듀서로 상태를 관리하는 것은 상태를 바로 설정하는 것과는 미묘하게 다릅니다. 상태를 설정해서 React에게 "무엇을 할지" 말하는 것 대신에, 이벤트 핸들러에서 "액션들"을 보내서 "사용자가 방금 무엇을 했는지"를 명시하는 것입니다.
-(로직을 업데이트하는 상태는 어딘가에 살아있을 것입니다!) 그래서 "`테스크들`를 설정하는 것" 대신에 이벤트 핸들러를 통해, "테스크를 추가했고/변경했고/삭제했다"는 행동을 보낼 것입니다. 
+(로직을 업데이트하는 상태는 어딘가에 살아있을 것입니다!) 그래서 이벤트 핸들러를 통해 "`테스크들`를 설정하는 것" 대신에 , "테스크를 추가했고/변경했고/삭제했다"는 행동을 보낼 것입니다. 
 이것이 사용자의 의도를 더 잘 묘사합니다.
 
 ```
