--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -136,7 +136,7 @@ function yourReducer(state, action) {
 }
 ```
 
-React 는 reducer에서 리턴되는 것을 상태로 설정할 것입니다. 
+React 는 reducer에서 반환되는 것을 상태로 설정할 것입니다. 
 
 상태 로직을 이벤트 핸들러에서 reducer 함수로 옮기기 위해서 이번 예제에서는, 여러번은 이것들을 할 것입니다:
 
