--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -224,7 +224,7 @@ function tasksReducer(tasks, action) {
 
 :::info Deep Dive
 ### 왜 reducer는 이러한 방식으로 불리는 것일까요?
- reducer는 컴포넌트 안ㅔ 코드의 양을 "줄일" 수 있지만, 사실 배열에서 수행 수  있는 reduce() 작업에서 이름지어졌습니다. 
+ reducer는 컴포넌트 안에 코드의 양을 "줄일" 수 있지만, 사실 배열에서 수행할 수  있는 reduce() 작업에서 이름 지어졌습니다. 
 
  reduce()를 실행하면 배열을 받고 다양한 값들 중 하나의 값을 "축적"합니다:
 
