--- a/docs/learn/Managing State/scaling-up-with-reducer-and-context.mdx
+++ b/docs/learn/Managing State/scaling-up-with-reducer-and-context.mdx
@@ -154,7 +154,7 @@ export default function AddTask() {
 
 ## 모든 배선들을 하나의 파일에 정리하기
 
-꼭 해야할 필요는 없지만, 미래에는 reducer와 context를 하나의 파일에서 관리해야 할 수도 있습니다. 현재는 `TasksContext.js`가 두 context 선언만을 포함하고 있습니다.
+필수는 아니지만, reducer와 context를 하나의 파일에서 관리해야 할 수도 있습니다. 현재는 `TasksContext.js`가 두 context 선언만을 포함하고 있습니다.
 
 ```jsx
 import { createContext } from 'react';
