--- a/docs/learn/Managing State/scaling-up-with-reducer-and-context.mdx
+++ b/docs/learn/Managing State/scaling-up-with-reducer-and-context.mdx
@@ -216,7 +216,7 @@ const dispatch = useTasksDispatch();
 그리고 `useTasksDispatch`를 트리 아래에 있는 어떤 컴포넌트에서든 tasks를 업데이트시킬 수 있도록 하는 방법이라고 생각할 것입니다.
 
 :::info
-`useTasks`와 `useTasksDispatch`같은 함수들을 [custom Hooks)](https://beta.reactjs.org/learn/reusing-logic-with-custom-hooks) 라고 부릅니다.
+`useTasks`와 `useTasksDispatch`같은 함수들을 [custom Hooks](https://beta.reactjs.org/learn/reusing-logic-with-custom-hooks) 라고 부릅니다.
 여러분이 만든 함수의 이름이 `use`로 시작한다면 React는 이를 custom hook이라고 받아들입니다. custom hook의 내부에서는 `useContext`와 같은 다른 hook들을 호출할 수 있습니다.
 :::
 
