--- a/docs/learn/Escape Hatches/escape-hatches.mdx
+++ b/docs/learn/Escape Hatches/escape-hatches.mdx
@@ -219,7 +219,7 @@ React는 `useState`, `useContext`, `useEffect`와 같은 내부 훅으로 이뤄
 이를 위해서, 여러분은 어플리케이션의 필요에 따라 각자의 훅을 만들 수 있습니다.
 
 이 예시에서, `usePointerPosition` 커스텀 훅은 커서의 위치를 추적합니다. 반면에 `useDelayedValue` 커스텀 훅은
-여러분이 넘긴 값에서 특정 밀리초가 "뒤쳐진" 값을 반환합니다.
+여러분이 넘긴 값에서 특정 밀리초가 "지연된" 값을 반환합니다.
 샌드박스 프리뷰 영역에 커서를 옮기고 커서를 따라다니는 점들의 경로이동을 보세요.
 
 <Code src="https://codesandbox.io/s/b0714g?file=%2FApp.js&utm_medium=sandpack" />
