--- a/docs/learn/Escape Hatches/escape-hatches.mdx
+++ b/docs/learn/Escape Hatches/escape-hatches.mdx
@@ -101,7 +101,7 @@ Effects는 React 패러다임의 탈출구 입니다. 이는 여러분을 React 
 - **렌더링을 위한 데이터 변경에 Effect를 필요로 하지 않습니다.**
 - **유저 이벤트를 조작하는데 Effect를 필요로 하지 않습니다.**
 
-예를 들어, 여러분은 다른 상태를 기반으로 어떤 상태를 조작하기 위해 Effect를 필요로 하지 않습니다.
+예를 들어, 여러분은 다른 상태를 기반으로 한 어떤 상태를 조작하기 위해 Effect를 필요로 하지 않습니다.
 
 ```js
 function Form() {
