--- a/docs/learn/Escape Hatches/escape-hatches.mdx
+++ b/docs/learn/Escape Hatches/escape-hatches.mdx
@@ -31,7 +31,7 @@ import { Card } from '../../../src/components/Card';
 
 ## refs로 값들을 참조하는 법
 
-여러분이 컴포넌트가 일부 정보를 "기억"하게 하고싶지만 정보가 [새로운 렌더링을 트리거](https://beta.reactjs.org/learn/render-and-commit)하길 원치 않는다면,
+여러분이 컴포넌트가 일부 정보를 "기억"하게 하고싶지만 정보가 [새로운 렌더링을 유도](https://beta.reactjs.org/learn/render-and-commit)하길 원치 않는다면,
 *ref*를 사용할 수 있습니다.
 
 ```js
