--- a/docs/learn/Escape Hatches/manipulating-the-dom-with-refs.mdx
+++ b/docs/learn/Escape Hatches/manipulating-the-dom-with-refs.mdx
@@ -174,7 +174,7 @@ node.scrollIntoView({
 
 ### 정답
 
-`SearchButton`으로 `onClick` prop 추가가 필요할 것이고, `SearchButton`이 그것을 브라우저 `<button>`으로 넘겨주도록 합니다. 또한 실제 `<input>`으로 넘겨주고 이동시키는 `<SearchInput>`으로도 ref를 내려줍니다.
+`SearchButton`으로 `onClick` prop 추가가 필요할 것이고, `SearchButton`이 `onClick`을 브라우저 `<button>`으로 넘겨주도록 합니다. 또한 실제 `<input>`으로 넘겨주고 이동시키는 `<SearchInput>`으로도 ref를 내려줍니다.
 마지막으로 클릭 핸들러에서, ref내부에 저장된 DOM노드에서 `focus`를 호출합니다.
 
 <Code src="https://codesandbox.io/s/lqpvo9?file=%2FApp.js&utm_medium=sandpack" />
