--- a/docs/learn/Escape Hatches/manipulating-the-dom-with-refs.mdx
+++ b/docs/learn/Escape Hatches/manipulating-the-dom-with-refs.mdx
@@ -164,7 +164,7 @@ node.scrollIntoView({
 
 ### 도전 4 : 분리된 컴포넌트들로 검색 영역 포커싱하기
 
-"검색" 버튼 클릭이 해당 영역으로 포커스를 두도록 만들어보세요. 각 컴포넌트는 다른 파일에 정의되어있고 밖으로 옮겨지면 안됩니다. 여러분은 어떻게 그들을 연결하나요?
+"검색" 버튼 클릭이 해당 영역으로 포커스를 두도록 만들어보세요. 각 컴포넌트는 다른 파일에 정의되어있고 밖으로 옮겨지면 안됩니다. 여러분은 어떻게 그들을 연결할 건가요?
 
 <Code src="https://codesandbox.io/s/6fygyx?file=%2FApp.js&utm_medium=sandpack" />
 
