--- a/docs/learn/Escape Hatches/manipulating-the-dom-with-refs.mdx
+++ b/docs/learn/Escape Hatches/manipulating-the-dom-with-refs.mdx
@@ -126,7 +126,7 @@ ref를 선언하여 `<video>` 요소에 넣으세요. 그리고 다음 상태에
 
 ### 정답
 
-ref를 input에 추가하고, DOM에서 `focus()`를 호출해 그것을 포커싱하도록 합니다.
+ref를 input에 추가하고, DOM에서 `focus()`를 호출해 input을 포커싱하도록 합니다.
 <Code src="https://codesandbox.io/s/t9iwh8?file=%2FApp.js&utm_medium=sandpack" />
 
 ### 도전 3 : 이미지 카라셀로 스크롤하기
