--- a/docs/learn/Escape Hatches/manipulating-the-dom-with-refs.mdx
+++ b/docs/learn/Escape Hatches/manipulating-the-dom-with-refs.mdx
@@ -52,7 +52,7 @@ React에서, [상태 업데이트는 저장됩니다.](https://beta.reactjs.org/
 따라서 여러분이 리스트 마지막 요소로 스크롤할때, todo는 아직 추가되지 않았습니다. 이것이 스크롤이 항상 "한발 느린"이유입니다.
 
 이 문제를 해결하기 위해, React에게 DOM을 동기적으로 업데이트("플러쉬")하게 강제할 수 있습니다. 이를 위해서
-`react-dom`에서 `flushSync`를 import하고 상태 업데이트를 를 flushSync 호출에 **감싸면됩니다**.
+`react-dom`에서 `flushSync`를 import하고 flushSync 호출로 **상태 업데이트를 감싸면됩니다**.
 
 ```js
 flushSync(() => {
