--- a/docs/learn/Escape Hatches/manipulating-the-doms-with-refs.mdx
+++ b/docs/learn/Escape Hatches/manipulating-the-doms-with-refs.mdx
@@ -7,7 +7,7 @@ React에 그런 작업을 위한 빌트인 도구가 없기 때문에, _ref_를 
 
 :::info 여러분이 배울 것
 - React가 관리하는 DOM 노드에 `ref` 속성을 통해 접근하는 방법
-- 어떻게 JSX `ref` 속성이 `useRef` hook과 관계를 맺는지.
+- JSX `ref` 속성이 `useRef` hook과 관계를 맺는 법
 - 다른 컴포넌트의 DOM 노드에 접근하는 방법
 - React가 관리하는 DOM 노드를 직접 수정해도 안전한 경우
 :::
