--- a/docs/learn/Escape Hatches/manipulating-the-doms-with-refs.mdx
+++ b/docs/learn/Escape Hatches/manipulating-the-doms-with-refs.mdx
@@ -66,7 +66,7 @@ Ref에 대한 내용을 더 알고 싶다면 [ref의 참조 변수](https://beta
 
 :::note DEEP DIVE
 위 예시에서, 이미 정의된 ref가 몇개 있습니다. 하지만, 가끔 배열의 각 아이템 갯수만큼 ref가 필요할 수도 있습니다.
-그리고 얼마나 필요한지 여러분은 모르는 상황이죠. 아래와 같은 코드는 *동작하지 않을 겁니다.*
+그리고 얼마나 필요한지 여러분은 모르는 상황이죠. 아래와 같은 코드는 **동작하지 않을 겁니다.**
 
 ```jsx
 <ul>
