--- a/docs/learn/Escape Hatches/manipulating-the-doms-with-refs.mdx
+++ b/docs/learn/Escape Hatches/manipulating-the-doms-with-refs.mdx
@@ -115,8 +115,8 @@ Ref에 대한 내용을 더 알고 싶다면 [ref의 참조 변수](https://beta
 
 `<input>`과 같은 브라우저 요소를 출력하는 내장 구성 요소에 ref를 넣으면 React는 해당 ref의 `current` 속성을 해당 DOM 노드(브라우저의 실제 `<input />`같은)로 설정합니다.
 
-하지만, ref를 `<MyInput />`과 같이 *직접 만든* 컴포넌트에 넘겨준다면 기본값은 `null`이 될 것입니다.
-아래는 이를 보여주는 예시이빈다. 버튼을 클릭해도 input이 focus되지 *않는*다는 점에 유의하세요.
+하지만, ref를 `<MyInput />`과 같이 **직접 만든** 컴포넌트에 넘겨준다면 기본값은 `null`이 될 것입니다.
+아래는 이를 보여주는 예시이빈다. 버튼을 클릭해도 input이 focus되지 **않는**다는 점에 유의하세요.
 
 <Code src="https://codesandbox.io/embed/long-moon-jo1l20?fontsize=14&hidenavigation=1&theme=dark" />
 
