--- a/docs/learn/Escape Hatches/manipulating-the-doms-with-refs.mdx
+++ b/docs/learn/Escape Hatches/manipulating-the-doms-with-refs.mdx
@@ -131,7 +131,7 @@ Warning: Function components cannot be given refs. Attempts to access this ref w
 심지어 그 자식 컴포넌트에도 말입니다! 이건 의도된 것입니다. ref는 조심스럽게 사용해야 하는 탈출구와 같습니다.
 다른 컴포넌트의 DOM 노드를 수동으로 조작하면 코드가 훨씬 취약해질 수 있습니다.
 
-대신 DOM 노드를 _노출_하려는 컴포넌트가 해당 동작을 *선택*해야 합니다.
+대신 DOM 노드를 _노출_하려는 컴포넌트가 해당 동작을 **선택**해야 합니다.
 컴포넌트는 그 자식들 중 하나에게 ref를 "포워딩"할지를 선택할 수 있습니다. 아래는 `MyInput`이 `forwardRef` API를 사용하는 예시입니다.
 
 ```jsx
