--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -1,7 +1,7 @@
 # effect 를 동기화하기
 
 몇 컴포넌트들은 외부 시스템과 동기화할 필요가 있습니다. 예를 들어, React 상태에 기반한 React가 아닌 컴포넌트를 제어하거나, 서버 연결을 설정하거나, 화면에 컴포넌트나 나타날 때 분석 로그를 보내고 싶을 수 있습니다.
-Effects는 렌더링 후에 코드를 실행해서 React 밖의 시스템과 컴포넌트를 동기화할 수 있습니다.
+*Effects*는 렌더링 후에 코드를 실행해서 React 밖의 시스템과 컴포넌트를 동기화할 수 있습니다.
 
 :::info 여러분이 배울 것
 - Effects가 무엇인지
