--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -7,7 +7,7 @@
 - Effects가 무엇인지
 - Effects가 이벤트와 어떻게 다른지
 - 컴포넌트 내부에 Effect를 선언하는 방법
-- 불필요하게 Effects를 리렌더링하는 것을 건너뛰는 방법
+- 불필요하게 Effects를 재실행하는 것을 건너뛰는 방법
 - 개발에서 Effects가 두 번 실행되는 이유와 그것을 고치는 방법 
 :::
 
