--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -28,7 +28,7 @@ prop과 상태를 받고 변형시킨 다음에 화면에서 볼 수 있도록 J
 
 때떄로 이것만으로는 충분하지 않습니다. 스크린에 보일 떄마다 채팅 서버에 연결하는 `ChatRoom` 컴포넌트를 고려해보세요. 
 서버에 연결하는 것은 순수한 계산이 아니기 떄문에 (부작용) 렌더링 동안에는 일어날 수 없습니다. 
-그러나, 클릭 한 번으로 인해 채팅룸이 표시되는 특정 이벤트는 없습니다.
+그러나, 클릭 한 번으로 인해 `ChatRoom`이 표시되는 특정 이벤트는 없습니다.
 
 **Effect를 사용하면 특정 이벤트를 사용하는 것 이외에 렌더링으로 일어나는 부작용을 명시할 수 있습니다.**
 채팅룸 안에서 메세지를 보내는 것은 특정 버튼을 클릭해서 사용자가 일으키기 떄문에 _이벤트_입니다.
