--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -23,7 +23,7 @@ prop과 상태를 받고 변형시킨 다음에 화면에서 볼 수 있도록 J
 - **이벤트 핸들러**([인터랙티비티 추가하기](https://beta.reactjs.org/learn/adding-interactivity)에서 소개된)는
 컴포넌트 내에서 컴포넌트를 계산하는 것 이외의 것들을 하는 중첩된 함수입니다. 
 이벤트 핸들러는 입력 필드를 업데이터하고, 제품을 사서 HTTP POST 요청을 보내거나 다른 화면로 사용자를 이끌 수 있습니다. 
-이벤트 핸들러는 (프로그램의 상태에 따라 바뀌는)"[부작용](https://en.wikipedia.org/wiki/Side_effect_(computer_science))"
+이벤트 핸들러는 (프로그램의 상태를 바꾸는)"[부작용](https://en.wikipedia.org/wiki/Side_effect_(computer_science))"
 이 있고 특정한 사용자의 행동으로 일어납니다(예를 들어, 버튼을 클릭하거나 타이핑하는 것).
 
 때떄로 이것만으로는 충분하지 않습니다. 스크린에 보일 떄마다 채팅 서버에 연결하는 `ChatRoom` 컴포넌트를 고려해보세요. 
