--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -57,7 +57,7 @@ Effect를 작성하기 위해서는 다음 세 단계를 따르세요:
 이것을 의존성을 명시해서 조절하는 방법을 배울 것입니다.
 
 2. **필요하면 치우는 과정을 추가하세요.** 어떤 이펙트들은 작동할 때마다 멈추고, 되돌리고, 지우는 방법을 명시할 필요가 있습니다/
-예를 들어, "연결"은 "연결해제"가 필요하고, "구독"은 "구독 해지"가 필요하고, "새로 고침"은 "취소나 "무시"가 필요합니다. _지움_함수를 반환해서 이러한 작업을 하는 방법을 배울 것입니다.
+예를 들어, "연결"은 "연결해제"가 필요하고, "구독"은 "구독 해지"가 필요하고, "새로 고침"은 "취소나 "무시"가 필요합니다. _cleanup_함수를 반환해서 이러한 작업을 하는 방법을 배울 것입니다.
 
 ## 1단계: Effect를 선언하세요.
 
