--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -72,7 +72,7 @@ Effect를 작성하기 위해서는 다음 세 단계를 따르세요:
 ```js 
 function MyComponent() {
   useEffect(() => {
-    // Code here will run after *every* render
+    // 여기 코드는 *모든* 렌터링 후에 동작합니다.
   });
   return <div />;
 }
