--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -301,4 +301,142 @@ function VideoPlayer({ src, isPlaying }) {
 
 ## 3단계: 필요하다면 cleanup을 추가하세요
 
-다른 예시를 고려해보세요.
+다른 예시를 고려해보세요. ChatRoom이 보일 떄마다 서버에 연결해야하는 `ChatRoom` 컴포넌트를 쓰고 있습니다.
+여러분은 `connect()`와 `disconnect()`를 갖고 있는 객체를 돌려주는 API `createConnection()`을 받았습니다. 
+사용자에게 보여지는 동안 컴포넌트를 어떻게 연결된 상태로 유지할 수 있을까요?
+
+Effect logic을 쓰는 것부터 시작합시다:
+
+```
+useEffect(() => {
+  const connection = createConnection();
+  connection.connect();
+});
+
+```
+
+모든 리랜더링 후에 연결을 유지하는 것은 느리기 떄문에 의존성 배열을 추가해야합니다:
+
+```js 
+useEffect(() => {
+  const connection = createConnection();
+  connection.connect();
+}, []);
+```
+
+**Effect 내부의 코드는 아무 prop이나 상태를 사용하지 않기 때문에 의존성 배열 `[]`(비어있음) 입니다. 
+이는 React가 컴포넌트가 "마운트"할 때만 이 코드를 실행한다는 것을 말해줍니다. 다른 말로 화면에 처음 나타날 때를 의미합니다.**
+
+이 코드를 실행해봅시다:
+
+<Code src="https://codesandbox.io/s/mgymtb?file=%2FApp.js&utm_medium=sandpack"/>
+
+Effect는 마운트 시 한번만 동작하기 떄문에 콘솔창에 `"✅ Connecting..."`이 한 번만 출력될 것이라고 예상할 수도 있습니다.
+**하지만 콘솔을 확인해보면 `"✅ Connecting..."`은 두 번 출력됩니다. 왜 이런 일이 일어날까요?**
+
+`ChatRoom` 컴포넌트가 다른 많은 화면들을 가진 더 큰 앱의 일부라고 상상해보세요. 
+사용자는 `ChatRoom` 페이지에서 그들의 여행을 시작합니다. 컴포넌트는 마운트하고 `connection.connect()`를 부릅니다. 
+사용자가 다른 화면으로 이동한다고 생각해보세요- 예를 들어, 설정 화면이요. `Chatroom` 컴포넌트는 내려갈 것입니다. 
+마지막으로, 사용자가 뒤로가기를 클릭하고 `ChatRoom`이 다시 마운트됩니다. 
+이 마운트는 두 번째 연결을 만들 것입니다- 하지만 첫 번째 연결은 없어진 적이 없습니다! 
+사용자가 앱을 둘러볼 때, 연결은 계속 쌓이고 있었습니다.
+
+이와 같은 버그는 수동 테스트를 많이 돌려보지 않는 이상 놓치기 쉽습니다. 
+빨리 발견하도록 하기 위해 React는 처음 마운트 한 후에 모든 컴포넌트를 다시 마운트 합니다.
+**`"✅ Connecting..."` 로그를 두 번 보는 것은 진짜 문제를 확이할 수 있도록 도와줍니다: 코드가 컴포넌트가 내려갈 때 연결을 닫지 않고 있다는 것입니다.**
+
+이 문제를 해결하기 위해, Effect에서 cleanup 함수를 돌려줍니다:
+
+```js 
+ useEffect(() => {
+    const connection = createConnection();
+    connection.connect();
+    return () => {
+      connection.disconnect();
+    };
+  }, []);
+```
+
+React는 Effec가 다시 돌아가기 전에, 그리고 컴포넌트가 내려가는 마지막 시점에(제거됩니다) cleanup 함수를 부를 것입니다. 
+cleanup 함수가 실행될 때 무엇이 일어나는지 확인해봅시다:
+
+<Code src="https://codesandbox.io/s/58bmg8?file=%2FApp.js&utm_medium=sandpack"/>
+
+이제 개발 환경에서 세 개의 콘솔 로그를 보게 됩니다:
+
+1. `"✅ 연결 중..."`
+2. `"❌ 연결 해지됨."`
+3. `"✅ 연결 중..."`
+
+**이는 개발 환경에서 맞는 행동입니다.** 컴포넌트를 다시 마운트하면서 React는 앱을 돌아다니거나 뒤로 가는 것이 코드를 망가뜨리지 않았다는 것을 확인합니다.
+연결을 해지하고 다시 연결하는 것은 정화하게 일어나야 할 일입니다! cleanup을 잘 구현할 때, Effect를 한번 돌리는 것과 Effect를 돌리고, cleanup함수를 돌리고, 다시 Effect를 실행하는 것 사이의 차이를 사용자가 볼 수 없어야 합니다.
+React가 개발 환경에서 버그가 있는지 조사하고 있기 때문에 별도의 연결/연결 해지 호출 쌍이 있습니다.
+이는 일반적인 일이기 때문에 없애려고 해서는 안됩니다.
+
+**실제 환경에서는 `"✅ 연결 중..." `이 한번만 출력되는 것을 보실 수 있을 것입니다.**
+컴포넌트를 다시 마운트하는 것은 개발자가 cleanup이 필요한 Effect를 찾을 수 있도록 도와주기 위해서만 일어납니다. 
+개발 환경의 설정 중에서 [Strict Mode](https://beta.reactjs.org/reference/react/StrictMode)를 끌 수도 있지만, 추천하지 않습니다. 
+이 설정은 위와 같은 많은 버그들을 찾을 수 있도록 해줍니다. 
+
+## 개발할 때 Effect 가 두 번 실행되는 것을 어떻게 조절할까요?
+
+React는 방금 전의 예시와 같은 버그를 찾도록 도와주기 위해 개발에서 컴포넌트를 의도적으로 다시 마운트합니다.
+**올바른 질문은 "Effect를 어떻게 한 번만 실행할 수 있나요"가 아니라 "어떻게 Effect를 고쳐서 다시 마운트 된 후에도 동작하게끔 할 수 있나요"입니다.**
+
+일반적으로 답은 cleanup 함수를 실행하는 것입니다. cleanup 함수는 Effect가 무엇을 하든간에 상관없이 멈추거나 다시 이전의 상태로 돌려놓아야 합니다.
+경험상 사용자는 Effect가 한 번 실행된 것(production 환경으로)과 실행 -> cleanup-> 실행의 순서(개발에서 볼 수 있듯이)를 눈치챌 수 없어야 합니다.
+
+앞으로 사용하게 될 Effect의 대부분은 아래 패턴 중 하나에 해당할 것입니다. 
+
+### React가 아닌 위젯을 조정하는 것
+
+가끔 React로 만들어지지 않은 UI 위젯을 추가할 필요가 있습니다. 예를 들어, 페이지에 지도 컴포넌트를 추가하고 싶다고 말해봅시다.
+지도 컴포넌트는 `setZoomLevel()` 메소드를 갖고 있어야하고, React 코드 내부의 `zoomLevel`상태 변수와 동기화시키고 싶어할 것입니다.
+Effect는 이것과 비슷하게 생길 것입니다:
+
+```js 
+useEffect(() => {
+  const map = mapRef.current;
+  map.setZoomLevel(zoomLevel);
+}, [zoomLevel]);
+```
+
+이 경우에는 cleanup 함수가 필요없다는 것을 확인하세요. 개발에서 React는 Effect를 두 번 부르지만 같은 값을 가진 `setZoomLevel`을 두 번 부르는 것은 아무 것도 하지 않기 때문에 문제가 되지 않습니다.
+살짝 느려질 수는 있지만 개발 환경에서만 다시 마운트하는 것이고 배포된 상황에서는 일어나지 않을 것이기 때문에 문제가 되지 않습니다.
+
+몇몇 API는 연속으로 두 번 부르는 것을 혀용하지 않을 수 잇습니다. 예를 들어, 내장되어있는 `[<dialog>](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDialogElement)` 엘리먼트의
+`showModal`을 두 번 부르면 에러를 던집니다. cleanup함수를 사용해서 dialog를 닫을 수 있습니다:
+
+```js 
+useEffect(() => {
+  const dialog = dialogRef.current;
+  dialog.showModal();
+  return () => dialog.close();
+}, []);
+```
+
+개발할 때, Effect는 `showModal()`을 부르고 나서 즉시`close()`를 부르고, `showModal()`을 다시 부를 것입니다.
+이는 배포 환경에서 보게 되듯이 사용자 입장에서 `showModal()`을 한번 부른 것과 같습니다.
+
+### 이벤트를 구독하는 것
+
+Effect가 무언가를 구독한다면 cleanup함수가 구독을 해지해야합니다:
+
+```js 
+useEffect(() => {
+  function handleScroll(e) {
+    console.log(e.clientX, e.clientY);
+  }
+  window.addEventListener('scroll', handleScroll);
+  return () => window.removeEventListener('scroll', handleScroll);
+}, []);
+```
+
+개발 환경에서, Effect는 `addEventListener()`를 부르고, 그 다음 즉시 `removeEventListener()`을 부른 다음, 다시 같은 핸들러로 `addEventListener()`를 호출합니다.
+그래서 한번에 단 하나의 활성화된 구독만 있을 것입니다. 이는 사용자 입장에서 `addEventListener()`을 한번 부르는 것과 같은 행동이라는 것을 배포환경에서 볼 수 있을 것입니다.
+
+
+
+
+
+
