--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -340,7 +340,7 @@ reducer는 반드시 순수해야 하기 때문에 상태를 변경시키면 안
 
 ## 문제에 도전해보세요.  
 <Challenge title="이벤트 핸들러에서 action 보내기" index={1}>
-  현재, `ContactList.js`와`Chat.js`안의 이벤트 핸들러들은`// TODO`코멘트를 갖고 있습니다. 입력이 작동하지 않는 이유이고, 버턴 클릭이 선택된 받는 이를 바꾸지 않는 이유입니다.
+  현재, `ContactList.js`와`Chat.js`안의 이벤트 핸들러들은`// TODO`코멘트를 갖고 있습니다. 입력이 작동하지 않는 이유이고, 버튼 클릭이 선택 참여자 이름을 바꾸지 않는 이유입니다.
 
   해당하는 action을 `dispatch`하기 위해 코드로 두`// TODO`를 교체하세요. 예상한 모양과 action의 종류를 보기 위해, `messengerReducer.js` 안의 reducer를 체크하세요. 
   reducer는 이미 작성되어 있어서 바꿀 필요는 없습니다. `ContactList.js`와`Chat.js`에서 action을 보내기만 하면 됩니다.
