Change interaction translation

--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -32,7 +32,7 @@ prop과 상태를 받고 변형시킨 다음에 화면에서 볼 수 있도록 J
 
 **Effect를 사용하면 특정 이벤트를 사용하는 것 이외에 렌더링으로 일어나는 부작용을 명시할 수 있습니다.**
 채팅룸 안에서 메세지를 보내는 것은 특정 버튼을 클릭해서 사용자가 일으키기 떄문에 _이벤트_입니다.
-그러나, 서버 연결을 설정하는 것은 컴포넌트가 보이도록 하는 인터랙션과 무관하게 일어날 필요가 있기 때문에 _Effect_입니다.
+그러나, 서버 연결을 설정하는 것은 컴포넌트가 보이도록 하는 상호작용과 무관하게 일어날 필요가 있기 때문에 _Effect_입니다.
 Effect는 화면 업데이트 후에 [렌더링 과정](rendering process)의 끝에 일어납니다.
 React 컴포넌트와 다른 외부 시스템(네트워크나 다른 라이브러리)을 동기화하기에 적기입니다.
 
