--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -305,7 +305,7 @@ function VideoPlayer({ src, isPlaying }) {
 여러분은 `connect()`와 `disconnect()`를 갖고 있는 객체를 돌려주는 API `createConnection()`을 받았습니다. 
 사용자에게 보여지는 동안 컴포넌트를 어떻게 연결된 상태로 유지할 수 있을까요?
 
-Effect logic을 쓰는 것부터 시작합시다:
+Effect 로직을 쓰는 것부터 시작합시다:
 
 ```
 useEffect(() => {
