--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -315,7 +315,7 @@ useEffect(() => {
 
 ```
 
-모든 리랜더링 후에 연결을 유지하는 것은 느리기 떄문에 의존성 배열을 추가해야합니다:
+모든 리렌더링마다 채팅에 연결하는 것은 느리기 떄문에 의존성 배열을 추가해야합니다:
 
 ```js 
 useEffect(() => {
