--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -336,7 +336,7 @@ Effect는 마운트 시 한번만 동작하기 떄문에 콘솔창에 `"✅ Conn
 
 `ChatRoom` 컴포넌트가 다른 많은 화면들을 가진 더 큰 앱의 일부라고 상상해보세요. 
 사용자는 `ChatRoom` 페이지에서 그들의 여행을 시작합니다. 컴포넌트는 마운트하고 `connection.connect()`를 부릅니다. 
-사용자가 다른 화면으로 이동한다고 생각해보세요- 예를 들어, 설정 화면이요. `Chatroom` 컴포넌트는 내려갈 것입니다. 
+사용자가 다른 화면으로 이동한다고 생각해보세요- 예를 들어, 설정 화면이요. `Chatroom` 컴포넌트는 언마운트 될 것입니다.
 마지막으로, 사용자가 뒤로가기를 클릭하고 `ChatRoom`이 다시 마운트됩니다. 
 이 마운트는 두 번째 연결을 만들 것입니다- 하지만 첫 번째 연결은 없어진 적이 없습니다! 
 사용자가 앱을 둘러볼 때, 연결은 계속 쌓이고 있었습니다.
