--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -343,7 +343,7 @@ Effect는 마운트 시 한번만 동작하기 떄문에 콘솔창에 `"✅ Conn
 
 이와 같은 버그는 수동 테스트를 많이 돌려보지 않는 이상 놓치기 쉽습니다. 
 빨리 발견하도록 하기 위해 React는 처음 마운트 한 후에 모든 컴포넌트를 다시 마운트 합니다.
-**`"✅ Connecting..."` 로그를 두 번 보는 것은 진짜 문제를 확이할 수 있도록 도와줍니다: 코드가 컴포넌트가 내려갈 때 연결을 닫지 않고 있다는 것입니다.**
+**`"✅ Connecting..."` 로그를 두 번 보는 것은 진짜 문제를 확인할 수 있도록 도와줍니다: 코드가 컴포넌트가 언마운트 될 때 연결을 닫지 않고 있다는 것입니다.**
 
 이 문제를 해결하기 위해, Effect에서 cleanup 함수를 돌려줍니다:
 
