--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -392,7 +392,7 @@ React는 방금 전의 예시와 같은 버그를 찾도록 도와주기 위해 
 
 가끔 React로 만들어지지 않은 UI 위젯을 추가할 필요가 있습니다. 예를 들어, 페이지에 지도 컴포넌트를 추가하고 싶다고 말해봅시다.
 지도 컴포넌트는 `setZoomLevel()` 메소드를 갖고 있어야하고, React 코드 내부의 `zoomLevel`상태 변수와 동기화시키고 싶어할 것입니다.
-Effect는 이것과 비슷하게 생길 것입니다:
+Effect는 아래와 유사할 것입니다:
 
 ```js 
 useEffect(() => {
