--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -357,7 +357,7 @@ Effect는 마운트 시 한번만 동작하기 떄문에 콘솔창에 `"✅ Conn
   }, []);
 ```
 
-React는 Effec가 다시 돌아가기 전에, 그리고 컴포넌트가 내려가는 마지막 시점에(제거됩니다) cleanup 함수를 부를 것입니다. 
+React는 Effect가 다시 실행되기 전에, 그리고 컴포넌트가 언마운트되는(제거되는) 마지막 시점에 cleanup 함수를 부를 것입니다.
 cleanup 함수가 실행될 때 무엇이 일어나는지 확인해봅시다:
 
 <Code src="https://codesandbox.io/s/58bmg8?file=%2FApp.js&utm_medium=sandpack"/>
