--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -81,7 +81,7 @@ function MyComponent() {
 컴포넌트가 렌더링할 때마다, 리액트는 스크린을 업데이트하고 *그리고 나서* `useEffect` 안의 코드를 실행합니다.
 다른 말로, `useEffect`는 **그 렌더링이 스크린에 반영될 떄까지 코드의 일부가 동작하는 것을 "연기"시킵니다.**
 
-외부 시스템과 동기화하기 위해 Effect를 사용하는 방법을 알아봅니삳. 
+외부 시스템과 동기화하기 위해 Effect를 사용하는 방법을 알아봅시다. 
 `<VideoPlayer/>` 컴포넌트를 고려해보세요. 이 컴포넌트에 `isPlaying` prop을 전달해 비디오를 실행하고 멈추는 것을 조절할 수 있다면 멋질 것입니다. 
 
 ```js
