--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -98,7 +98,7 @@ function VideoPlayer({ src, isPlaying }) {
 ```
 
 그러나, 브라우저의 `<video>`태그는 `isPlaying` prop을 갖고 있지 않습니다.
-비디오를 조정하는 방법은 DOM 앨리먼트의 `play()`와 `pause()`을 수동으로 부르는 것 뿐입니다.
+비디오 태그를 조작하는 방법은 DOM 앨리먼트의 `play()`와 `pause()`을 수동으로 부르는 것 뿐입니다.
 **`isPlaying`prop의 값과 동기화를 시켜야 하고, isPlaying 은 `play()` 와 `pause()`를 내부적으로 사용해 
 현재 비디오를 실행_해야한다_는 것을 말해주어야합니다.**
 
