--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -105,7 +105,7 @@ function VideoPlayer({ src, isPlaying }) {
 먼저 `video` DOM 노드로부터 [ref를 얻어야](https://beta.reactjs.org/learn/manipulating-the-dom-with-refs)
 합니다.
 
-렌더링하면서 `play()`나 `pause()`를 부르고 싶은 마음이 들 수도 있지만, 그 방법은 옳지 않습니다:
+렌더링하면서 `play()`나 `pause()`를 호출하고 싶은 마음이 들 수도 있지만, 그 방법은 옳지 않습니다:
 
 <Code src="https://codesandbox.io/s/fjm8gc?file=/App.js&utm_medium=sandpack"/>
 
