--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -188,7 +188,7 @@ Effect는 컴포넌트를 _외부_ 시스템과 동기화해야합니다. 만약
 
 <Code src="https://codesandbox.io/s/z1hxjk?file=%2FApp.js&utm_medium=sandpack"/>
 
-`useEffect` 호출을 할 때 두 번쨰 인자로 의존성 배열을 명시해서 불필요하게 Effect를 다시 돌아가게 하는 것을 피하도록 할 수 있습니다.
+`useEffect` 호출을 할 때 두 번쨰 인자로 의존성 배열을 명시해서 불필요하게 **Effect를 다시 돌아가게 하는 것을 피하도록** 할 수 있습니다.
 위 예시의 14번쨰 줄에 빈 `[]` 배열을 추가하는 것으로 시작해보세요:
 
 ```js 
