--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -197,7 +197,7 @@ Effect는 컴포넌트를 _외부_ 시스템과 동기화해야합니다. 만약
   }, []);
 ```
 
-`React 훅인 useEffect가 `isPlaying` 의존성을 갖고 있지 않다는` 에러를 봐야합니다:
+`React Hook useEffect has a missing dependency: 'isPlaying'` 에러를 봐야합니다:
 
 <Code src="https://codesandbox.io/s/dszumx?file=%2FApp.js&utm_medium=sandpack"/>
 
