--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -369,7 +369,7 @@ cleanup 함수가 실행될 때 무엇이 일어나는지 확인해봅시다:
 3. `"✅ 연결 중..."`
 
 **이는 개발 환경에서 맞는 행동입니다.** 컴포넌트를 다시 마운트하면서 React는 앱을 돌아다니거나 뒤로 가는 것이 코드를 망가뜨리지 않았다는 것을 확인합니다.
-연결을 해지하고 다시 연결하는 것은 정화하게 일어나야 할 일입니다! cleanup을 잘 구현할 때, Effect를 한번 돌리는 것과 Effect를 돌리고, cleanup함수를 돌리고, 다시 Effect를 실행하는 것 사이의 차이를 사용자가 볼 수 없어야 합니다.
+연결을 해지하고 다시 연결하는 것은 정확하게 일어나야 할 일입니다! cleanup을 잘 구현할 때, Effect를 한번 돌리는 것과 Effect를 돌리고, cleanup함수를 돌리고, 다시 Effect를 실행하는 것 사이의 차이를 사용자가 볼 수 없어야 합니다.
 React가 개발 환경에서 버그가 있는지 조사하고 있기 때문에 별도의 연결/연결 해지 호출 쌍이 있습니다.
 이는 일반적인 일이기 때문에 없애려고 해서는 안됩니다.
 
