--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -1,5 +1,62 @@
 import { Code } from '../../../src/components/Code';
 
+## 애플리케이션 초기화 하기
+
+일부 로직은 전체 앱이 로드되는 동안 딱 한번만 실행되어야 합니다. 여러분은 아마 최상위 레벨 컴포넌트의 effect에 이를 위치시킬 것입니다.
+
+```jsx
+function App() {
+  // 🔴 effect에 딱 한번만 실행되어야 하는 로직을 넣는건 피해야 합니다.
+  useEffect(() => {
+    loadDataFromLocalStorage();
+    checkAuthToken();
+  }, []);
+  // ...
+}
+```
+
+하지만, 여러분은 이 로직이 [개발 환경에서 두 번 실행된다는 것을 알아냈을 것입니다.](https://beta.reactjs.org/learn/synchronizing-with-effects#how-to-handle-the-effect-firing-twice-in-development)
+이 로직은 두 번 호출되는 것을 전제로 만들어지지 않았기 때문에 인증 토큰을 무효화 하는 등의 이슈를 만들 수도 있습니다.
+일반적으로, 컴포넌트는 여러번 마운트 되는 것을 전제로 작성됩니다. `App` 컴포넌트와 같은 최상위 레벨 컴포넌트도 마찬가지이빈다.
+비록 프로덕션 환경에서는 다시 마운트 되지 않겠지만, 모든 컴포넌트에 같은 제약사항을 부여하는 것은 컴포넌트의 이동과 재사용을 용이하게 만들어 줍니다.
+만약 일부 로직이 *컴포넌트 마운트당 한 번*이 아닌 *전체 앱이 로드되는 동안 딱 한번만 실행되어야 한다면*, 최상위 레벨에 변수를 하나 추가해 그 로직이 이미 실행되었는지를 판단하고, 다시 실행되는 일을 막을 수 있습니다.
+
+```jsx
+let didInit = false;
+
+function App() {
+  useEffect(() => {
+    if (!didInit) {
+      didInit = true;
+      // ✅ 앱 로드 동안 단 한범난 실행합니다.
+      loadDataFromLocalStorage();
+      checkAuthToken();
+    }
+  }, []);
+  // ...
+}
+```
+
+앱 렌더 이전에 모듈이 초기화 되는 단계에서 실행시킬 수도 있습니다.
+
+```jsx
+if (typeof window !== 'undefined') { // 브라우저에서 동작중인지 확인합니다.
+   // ✅ 앱 로드 동안 단 한범난 실행합니다.
+  checkAuthToken();
+  loadDataFromLocalStorage();
+}
+
+function App() {
+  // ...
+}
+```
+
+컴포넌트가 실제로 렌더링 되지 않더라도 컴포넌트가 불려와지는 동안 최상위 레벨의 코드는 딱 한번만 실행됩니다.
+임의의 컴포넌트를 불러올 때 앱이 느려지거나 예상하지 못한 동작을 만들고 싶지 않다면, 이 패턴을 남용하지 마세요.
+이런 범애플리케이션 단위 로직은 `App.js`같은 루트 컴포넌트나 애플리케이션의 진입점이 되는 모듈에서만 사용하도록 하세요.
+
+
+
 
 ## 부모 컴포넌트에게 상태 변화를 알려주기
 
