--- a/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
+++ b/docs/learn/Escape Hatches/synchronizing-with-effects.mdx
@@ -92,7 +92,7 @@ function MyComponent() {
 
 ```js
 function VideoPlayer({ src, isPlaying }) {
-  // TODO: do something with isPlaying
+  // TODO: isPlaying 으로 뭔가를 해보세요. 
   return <video src={src} />;
 }
 ```
@@ -405,7 +405,7 @@ useEffect(() => {
 살짝 느려질 수는 있지만 개발 환경에서만 다시 마운트하는 것이고 배포된 상황에서는 일어나지 않을 것이기 때문에 문제가 되지 않습니다.
 
 몇몇 API는 연속으로 두 번 부르는 것을 혀용하지 않을 수 잇습니다. 예를 들어, 내장되어있는 `[<dialog>](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDialogElement)` 엘리먼트의
-`showModal`을 두 번 부르면 에러를 던집니다. cleanup함수를 사용해서 dialog를 닫을 수 있습니다:
+`[showModal](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDialogElement/showModal)`을 두 번 부르면 에러를 던집니다. cleanup함수를 사용해서 dialog를 닫을 수 있습니다:
 
 ```js 
 useEffect(() => {
