--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -17,7 +17,7 @@ function App() {
 
 하지만, 여러분은 이 로직이 [개발 환경에서 두 번 실행된다는 것을 알아냈을 것입니다.](https://beta.reactjs.org/learn/synchronizing-with-effects#how-to-handle-the-effect-firing-twice-in-development)
 이 로직은 두 번 호출되는 것을 전제로 만들어지지 않았기 때문에 인증 토큰을 무효화 하는 등의 이슈를 만들 수도 있습니다.
-일반적으로, 컴포넌트는 여러번 마운트 되는 것을 전제로 작성됩니다. `App` 컴포넌트와 같은 최상위 레벨 컴포넌트도 마찬가지이빈다.
+일반적으로, 컴포넌트는 여러번 마운트 되는 것을 전제로 작성됩니다. `App` 컴포넌트와 같은 최상위 레벨 컴포넌트도 마찬가지입니다.
 비록 프로덕션 환경에서는 다시 마운트 되지 않겠지만, 모든 컴포넌트에 같은 제약사항을 부여하는 것은 컴포넌트의 이동과 재사용을 용이하게 만들어 줍니다.
 만약 일부 로직이 *컴포넌트 마운트당 한 번*이 아닌 *전체 앱이 로드되는 동안 딱 한번만 실행되어야 한다면*, 최상위 레벨에 변수를 하나 추가해 그 로직이 이미 실행되었는지를 판단하고, 다시 실행되는 일을 막을 수 있습니다.
 
