--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -147,7 +147,7 @@ function Toggle({ isOn, onChange }) {
 ```
 
 ["상태를 위로 올리는 것"](https://beta.reactjs.org/learn/sharing-state-between-components)은 부모 컴포넌트로 하여금 자신의 상태로 `Toggle` 컴포넌트를 완전히 제어하게끔 해줍니다.
-이는 부모 컴포넌트가 더 많은 로직을 갖게 되지만, 전체적으로 보면 더 적은 상태면 충분하기 때문에 걱정거리가 줄어듭니다.
+이는 부모 컴포넌트가 더 많은 로직을 갖게 되지만, 전체적으로 보면 우려되는 상태는 더 적어집니다.
 만약 두개의 서로 다른 상태 변수들을 동기화해야 할 일이 있다면, 상태를 위로 올려야 할 수도 있다는 신호입니다.
 
 
