--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -61,7 +61,7 @@ function App() {
 ## 부모 컴포넌트에게 상태 변화를 알려주기
 
 지금 우리가 `Toggle` 컴포넌트를 작성중이라고 가정해봅시다.
-이 컴포넌트는 내부 상태로 `true` 혹은 `false` 값을 가지는 `isOn`을 갖고 있습니다.
+이 컴포넌트는 `true` 혹은 `false` 값을 가질 수 있는`isOn`을 내부 상태로 갖고 있습니다.
 이 변수의 상태를 바꾸는 방법은 클릭이나 드래그 등 여러 방법이 있습니다. 우리가 원하는 것은 `Toggle` 컴포넌트의 내부 상태가 바뀌었을 때
 이를 부모 컴포넌트에게 알려주는 것이므로 우리는 `onChange` 이벤트를 노출해 effect에서 호출하도록 합니다.
 
