--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -265,7 +265,7 @@ function ChatIndicator() {
 
 ## 데이터 fetch 하기
 
-수많은 앱에서 effect를 데이터를 fetch 하는데 사용하고 있습ㄴ디ㅏ. 이는 꽤 일반적인 데이터 fetch 방법으로, 아래와 같이 사용합니다.
+수많은 앱에서 데이터를 fetch 하는데 effect를 사용하고 있습니다. 이는 꽤 일반적인 데이터 fetch 방법으로, 아래와 같이 사용합니다.
 
 ```jsx
 function SearchResults({ query }) {
