--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -291,7 +291,7 @@ Fetch 로직을 이벤트 핸들러로 옮길 필요는 *없습니다.*
 이는 이벤트 핸들러에 로직을 넣어야 했던 이전의 예시들과는 모순되는 것처럼 보일 수도 있습니다.
 하지만, *입력 이벤트*를 처리할 때 주된 동작이 fetch를 하기 위함이 아님을 고려해야 합니다. 검색창에 입력된 값은 URL을 통해 미리 채워져 있고,
 사용자는 아마 검색창을 건드리지 않고 뒤로가기 혹은 앞으로가기를 통해 탐색할 것입니다. `page`와 `query`가 어디서 오는 데이터인지는 중요하지 않습니다.
-반면에 이 컴포넌트는 현재 사용자에게 보여지고 있고, 여러분은 `results`가 현재 `page`와 `query`에 따른 원격 데이터와 [동기화](https://beta.reactjs.org/learn/synchronizing-with-effects)되길 바랄 것입니다.
+반면에 이 컴포넌트는 현재 사용자에게 보여지고 있고, 여러분은 `results`가 현재 `page`와 `query`에 맞춰 원격 데이터와 [동기화](https://beta.reactjs.org/learn/synchronizing-with-effects)되길 바랄 것입니다.
 그래서 effect를 사용합니다.
 
 하지만 위 코드는 버그가 있습니다. `"hello"`를 빠르게 입력한다고 가정해봅시다. 그럼 `query`는 `"h"`로부터 `"he"`, `"hel"`, `"hell"`, `"hello"`로 변할 것입니다.
