--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -364,7 +364,7 @@ function useData(url) {
 }
 ```
 
-아마 여러분은 에러 핸들링이나 내용의 로딩 상태를 추적하는 로직을 추가하길 원할 수도 있습니다.
+아마 여러분은 에러 핸들링이나 컨텐츠의 로딩 상태를 추적하는 로직을 추가하길 원할 수도 있습니다.
 그럼 이런 훅을 스스로 만들거나 React 생태계에 이미 존재하는 여러 해법들 중 하나를 골라 사용해볼 수도 있습니다.
 **이런 방법을 프레임워크의 내장 데이터 fetch 매커니즘을 사용하지 않고 단독으로 사용하면 덜 효과적일 수도 있지만,
 데이터 fetch 로직을 커스텀 훅으로 이동시키면 이후에 다른 효과적인 데이터 fetch 전략을 도입하기 수월해질 수 있습니다.**
