--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -376,7 +376,7 @@ function useData(url) {
 - 만약 렌더링 도중에 계산이 가능하다면, effect를 쓰지 마세요.
 - 비용이 큰 연산을 캐시해야 한다면 `useEffect` 대신 `useMemo`를 사용하세요.
 - 컴포넌트 트리 전체를 리셋해야 한다면, 다른 `key`를 전달하세요.
-- prop 변경에 의존하는 일부의 상태를 변경하려 한다면, 렌더링 중에 변경학세요.
+- prop 변경에 의존하는 특정 상태를 업데이트하려 한다면, 렌더링 중에 변경하세요.
 - 컴포넌트가 *화면에 그려졌기* 때문에 실행되어야 하는 코드는 effect에 있어야 하지만, 그 외의 코드는 이벤트 핸들러에 있어야 합니다.
 - 만약 하나의 상태에 대해 여러 컴포넌트가 업데이트 한다면, 하나의 이벤트 핸들러에서 업데이트 하는게 더 낫습니다.
 - 언제든 서로 다른 컴포넌트들에서 상태 변수를 동기화 하려 한다면, 상태를 상위 컴포넌트로 올리는 것을 고려해보세요.
