--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -452,7 +452,7 @@ Reset 버튼을 누르면, 작성중이던 모든 form의 변경사항들이 폐
 <Code src="https://codesandbox.io/embed/objective-leftpad-3c3o5l?fontsize=14&hidenavigation=1&theme=dark" />
 
 ### 힌트
-만약 React에게 `savedContact.id`가 달라졌음을 알려줄 수 있다면 좋을 것입니다. `EditContact`의 form은 개념적으로 **다른 연락처의 form**이 되고, 상태를 유지하지 않게 될 것입니다.
+만약 React에게 `savedContact.id`가 달라졌음을 알려줄 수 있다면 좋을 것입니다. `EditContact`의 form은 개념적으로 *다른 연락처의 form*이 되고, 상태를 유지하지 않게 될 것입니다.
 떠오르는 방법이 있지 않나요?
 
 ### 정답
