--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -413,7 +413,7 @@ function useData(url) {
 이는 체크박스를 켜고 끄는 과정에서 화면에 그려질 할 일들이 변경되기 때문에 충분히 예상 가능합니다.
 
 여러분이 할 일은 `visibleTodos`를 재계산하는 `TodoList` 컴포넌트의 effect를 제거하는 것입니다.
-하지만 `getVisibleTodos()`는 입력창에 입력하는 과정에서 재실행되어서는 안됩니다(그리고 어떤 로그도 출력해서는 안됩니다).
+하지만 `getVisibleTodos()`는 입력창에 입력하는 과정에서 재실행되어서는 *안됩니다*(그리고 어떤 로그도 출력해서는 안됩니다).
 
 <Code src="https://codesandbox.io/embed/wizardly-lovelace-tw5bs4?fontsize=14&hidenavigation=1&theme=dark" />
 
