--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -483,3 +483,92 @@ function ChatRoom({ getOptions }) {
 이 방법은 렌더링 중에 호출해도 안전하기 때문에 [순수](https://react.dev/learn/keeping-components-pure) 함수에만 사용할 수 있습니다. 
 함수가 이벤트 핸들러이지만 변경 내용이 Effect를 다시 동기화하 않으려면 [대신 Effect 이벤트로 래핑합니다](https://react.dev/learn/removing-effect-dependencies#do-you-want-to-read-a-value-without-reacting-to-its-changes).
 
+## 되돌아보기
+
+- 종속성은 항상 코드와 일치해야 합니다.
+- 종속성이 만족스럽지 않을 때는 코드를 편집해야 합니다.
+- 린터를 억제하면 매우 혼란스러운 버그가 발생하므로 항상 피해야 합니다.
+- 종속성을 제거하려면 링터에 의존성이 필요하지 않다는 것을 "증명"해야 합니다.
+- 특정 상호 작용에 대한 응답으로 일부 코드를 실행해야 하는 경우 해당 코드를 이벤트 핸들러로 이동합니다.
+- 다른 이유로 Effect의 다른 부분을 다시 실행해야 하는 경우 여러 Effect로 나눕니다.
+- 이전 상태를 기준으로 일부 상태를 업데이트하려면 업데이트 함수를 전달합니다.
+- 최신 값을 "반응"하지 않고 읽으려면 Effect에서 Effect 이벤트를 추출합니다.
+- JavaScript에서 객체와 함수가 다른 시간에 만들어졌으면 다른 것으로 간주됩니다.
+- 객체 및 함수 종속성을 피하려고 합니다. 컴포넌트 외부 또는 Effect 내부로 이동합니다.
+
+:::note 문제에 도전해보세요 
+
+## 도전1. 인터벌 제설정을 수정하기
+
+이 효과는 초당 눈금이 표시되는 인터벌을 설정합니다. 여러분은 이상한 일이 일어나는 것을 알아차렸습니다. 
+인터벌이 똑딱거릴 때마다 파괴되고 다시 생성되는 것 같습니다. 
+간격이 지속적으로 다시 생성되지 않도록 코드를 수정합니다.
+
+<Code src="https://codesandbox.io/s/x99ygb?file=/App.js&utm_medium=sandpack"/>
+
+## 힌트
+
+이 Effect의 코드는 `count`에 따라 달라지는 것 같습니다. 이 의존성을 필요로 하지 않는 방법이 있나요? 
+해당 값에 대한 종속성을 추가하지 않고 이전 값을 기준으로 `count` 상태를 업데이트할 수 있는 방법이 있어야 합니다.
+
+## 정답
+
+Effect 내부에서 `count` 상태를 `count + 1`로 업데이트하려고 합니다. 
+그러나 이로 인해 Effect는 매초마다 변경되는 `count`에 따라 달라지므로 매초마다 안터벌이 다시 만들어집니다.
+
+이 문제를 해결하려면 [업데이트하는 함수](https://react.dev/reference/react/useState#updating-state-based-on-the-previous-state)를 사용하고 `setCount(count + 1)`
+ 대신 `setCount(c = > c + 1)`를 사용합니다:
+
+ <Code src="https://codesandbox.io/s/bpkif3?file=%2FApp.js&utm_medium=sandpack"/>
+
+Effect 내부의 `count`를 읽는 대신 `c => c + 1` 명령("이 숫자를 계산합니다!")을 React에 전달합니다. 
+React는 다음 렌더에 적용합니다. 
+또한 더 이상 Effect 내부의 `count` 값을 읽을 필요가 없으므로 Effect의 종속성을 비워둘 수 있습니다([https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame]). 
+이렇게 하면 Effect가 모든 눈금에 대한 인터벌을 다시 만들지 않습니다.
+
+## 도전2. 애니메이션이 다시 재생되는 것을 고치기
+
+이 예에서 "표시"를 누르면 시작 메시지가 사라집니다. 
+애니메이션은 몇 초 정도 걸립니다. 
+제거를 누르면 시작 메시지가 즉시 사라집니다. 
+페이드인 애니메이션에 대한 로직은 애니메이션.js 파일에서 플레인 JavaScript [애니메이션 루프](https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame)로 구현됩니다. 
+당신은 그 논리를 바꿀 필요가 없고 제3의 라이브러리로 취급할 수 있습니다. 
+Effect는 DOM 노드에 대한 `FadeInAnimation` 인스턴스를 만든 다음 시작(기간) 또는 중지()를 호출하여 애니메이션을 제어합니다. 
+지속 시간은 슬라이더로 제어합니다. 슬라이더를 조정하고 애니메이션이 어떻게 변하는지 확인합니다.
+
+이 코드는 이미 작동하지만 변경할 사항이 있습니다. 
+현재 `duration` 상태 변수를 제어하는 슬라이더를 이동하면 애니메이션이 다시 트리거됩니다. 
+Effect가 `duration` 변수에 "반응"하지 않도록 동작을 변경합니다. 
+표시를 누르면 Effect가 슬라이더의 현재 `duration`을 사용합니다. 
+그러나 슬라이더를 움직인다고 해서 애니메이션이 다시 시작되는 것은 아닙니다.
+
+<Code src="https://codesandbox.io/s/8zzee4?file=%2FApp.js&utm_medium=sandpack"/>
+
+### 힌트
+
+Effect 안에 반응성이 없어야 하는 코드 라인이 있습니까? 반응성이 없어야하는 코드를 Effect 밖으로 이동하려면 어떻게 해야 하나요?
+
+Effect는 지속 시간의 최신 값을 읽어야 하지만 `duration`의 변화에 "반응"하지는 않습니다. 
+`duration`을 사용하여 애니메이션을 시작하지만 애니메이션을 시작해도 반응하지 않습니다. 
+비반응성 코드 부분을 Effect 이벤트로 추출하고 Effect에서 해당 함수를 호출합니다.
+
+<Code src="https://codesandbox.io/s/dyrkzy?file=%2FApp.js&utm_medium=sandpack"/>
+
+`onApear`와 같은 Effect Events는 반응성이 없으므로 애니메이션을 다시 트리거하지 않고 내부의 지속 시간을 읽을 수 있습니다.
+
+### 도전3. 채팅 재연결 고치기
+
+이 예에서는 "테마 토글"을 누를 때마다 채팅이 다시 연결됩니다. 
+왜 이런 일이 일어나나요? 
+서버 URL을 편집하거나 다른 대화방을 선택할 때만 대화가 다시 연결되도록 오류를 수정합니다.
+
+`chat.js`을 제3의 라이브러리로 취급: API를 확인하기 위해 참조할 수 있지만 편집하지 않습니다.
+
+<Code src="https://codesandbox.io/s/g084dx?file=%2FChatRoom.js&utm_medium=sandpack"/>
+
+### 힌트 
+
+이 문제를 해결하는 방법은 여러 가지가 있지만 궁극적으로는 객체를 종속성으로 지정하는 것을 피해야 합니다.
+
+### 정답
+
