--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -31,7 +31,7 @@ React가 아닌 위젯, 네트워크 또는 브라우저 DOM같은 다른 외부
   재실행 될 것입니다.
 
 - **유저 이벤트를 핸들링하는데 Effects를 사용할 필요 없습니다**
-  예를 들어, 유저가 상품을 구매할 때 /api/buy POST 요청을 보내고 알림을 표시하고 싶다고 가정합시다.
+  예를 들어, 유저가 상품을 구매할 때 `/api/buy` POST 요청을 보내고 알림을 표시하고 싶다고 가정합시다.
   여러분은 구매 버튼 클릭 이벤트 핸들러에서 정확히 무슨 일이 일어났는지 알 수 있습니다.
   Effect가 실행되는 시점에는, 유저가 _무엇을_ 했는지(예를 들어, 어떤 버튼이 클릭되었는지) 알 수 없습니다.
   이는 이벤트 핸들러에서 유저 이벤트를 처리하는 이유입니다.
