--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -10,7 +10,7 @@ React가 아닌 위젯, 네트워크 또는 브라우저 DOM같은 다른 외부
 
 :::info 여러분이 배울 것
 
-- 컴포넌트에서 불필요한 Effects를 제거하는 방법
+- 컴포넌트에서 불필요한 Effects를 제거하는 이유와 방법
 - Effect없이 비용이 큰 계산을 캐싱 하는 법
 - Effects없이 컴포넌트의 상태를 초기화하거나 조정하는 법
 - 이벤트 핸들러간에 로직을 공유하는 법
