--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -185,7 +185,7 @@ console.timeEnd('filter array');
 가장 정확한 타이밍을 얻기 위해서, 여러분의 앱을 프로덕션으로 빌드하고 유저들이 가진 기기로 테스트해보세요.
 :::
 
-## prop이 볂화할때 모든 상태를 리셋하기
+## prop이 변화할때 모든 상태를 리셋하기
 
 이 `ProfilePage` 컴포넌트는 `userId` prop을 받습니다. 페이지는 코멘트 입력을 갖고 있고, `comment`를 상태 변수로 갖고 있습니다.
 어떤 날에, 여러분이 문제를 발견합니다: 어떤 프로필에서 다른 프로필로 향하면, `comment`가 리셋되지 않는 것입니다.
