--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -131,7 +131,7 @@ function TodoList({ todos, filter }) {
 }
 ```
 
-또는 한 줄로 작성하기:
+혹은 아래처럼 한 줄로 작성할 수도 있습니다.
 
 ```javascript
 import { useMemo, useState } from 'react';
