--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -64,7 +64,7 @@ function Form() {
 }
 ```
 
-이것은 필요 이상으로 복잡합니다. 또한 효율적이지 않습니다"
+이것은 필요 이상으로 복잡합니다. 또한 효율적이지 않습니다.
 `fullName`에 대한 기존 값으로 전체 렌더링을 수행한 다음, 즉시 업데이트된 값으로 재렌더링합니다.
 상태 변수와 Effect를 모두 제거하세요.
 
