--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -188,7 +188,7 @@ console.timeEnd('filter array');
 ## prop이 변화할때 모든 상태를 리셋하기
 
 이 `ProfilePage` 컴포넌트는 `userId` prop을 받습니다. 페이지는 코멘트 입력을 갖고 있고, `comment`를 상태 변수로 갖고 있습니다.
-어떤 날에, 여러분이 문제를 발견합니다: 어떤 프로필에서 다른 프로필로 향하면, `comment`가 리셋되지 않는 것입니다.
+그런데 문제가 발생했습니다. 어떤 프로필에서 다른 프로필로 향하면, `comment`가 리셋되지 않는 것입니다.
 결과로, 다른 유저의 프로필에 코멘트를 실수로 작성하기 쉬워졌습니다. 여러분은 이 문제를 해결하기 위해, `userId`가 변경될 때
 `comment`를 정리하고 싶어합니다.
 
