--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -367,7 +367,7 @@ function ProductPage({ product, addToCart }) {
 ## POST 요청 보내기
 
 이 `Form` 컴포넌트는 두 종류의 POST 요청을 보냅니다. 그것이 마운트 되었을 때 분석 이벤트를 보냅니다.
-여러분이 폼을 채우고 제출 버튼을 누르면, `/api/register` 엔드포인트에 POST요청을 보냅니다.
+여러분이 form을 채우고 제출 버튼을 누르면, `/api/register` 엔드포인트에 POST요청을 보냅니다.
 
 ```JavaScript
 function Form() {
