--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -333,7 +333,7 @@ function ProductPage({ product, addToCart }) {
 ```
 
 이 Effect는 불필요합니다. 또한 대부분 버그들을 야기합니다. 예를 들어, 여러분의 앱이 페이지 리로드시에
-쇼핑 카트를 "기억"한다고 가정해봅시다. 한번 카트에 사웊ㅁ을 추가하고 페이지를 새로고침하면, 알림이 새로 나타날 것입니다.
+쇼핑 카트를 "기억"한다고 가정해봅시다. 한번 카트에 상품을 추가하고 페이지를 새로고침하면, 알림이 새로 나타날 것입니다.
 상품 페이지를 새로고침할때마다 알림이 나타날 것입니다. 이는 `product.isInCart`가 페이지 로드시에 이미 `true`이기 때문에,
 위의 Effect가 `showNotification()`을 호출하는 것입니다.
 
