--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -479,7 +479,7 @@ function Game() {
 위의 예시에서, 최악의 케이스(`setCard`->렌더링->`setGoldCardCount`->렌더링->`setRound`->렌더링->`setIsGameOver`->렌더링)에서
 트리 아래서 세가지 불필요한 렌더링이 있습니다.
 
-느리지 않더라도, 여러분의 코드가 발전함에 따라, 새로운 요구사항들에 여러분이 작성했던 "체인"이 맞지 않는다는 경우들에 부딪힐 것입니다.
+느리지 않더라도, 여러분의 코드가 발전함에 따라, 새로운 요구사항들은 여러분이 작성했던 "체인"이 맞지 않는다는 경우를 마주하게 될 것입니다.```
 여러분이 게임 이동들의 히스토리를 단계별로 살펴보는 방법을 추가한다고 가정합시다.
 여러분은 과거의 값들로 각 상태 변수를 업데이트함으로서 할 수 있습니다. 하지만 `card` 상태를 과거 값으로 세팅하는 것은
 Effect 체인을 트리거해서 여러분이 보여주는 데이터를 변경합니다. 이와 같은 코드는 융통성없고 취약합니다.
