--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -277,7 +277,7 @@ console.log(Object.is(options1, options2)); // false
 
 **객체 및 함수 종속성으로 인해 Effect가 필요 이상으로 자주 다시 동기화될 수 있습니다.**
 
-따라서 가능할 때마다 Effect의 종속성으로 객체와 함수를 사용하지 않도록 해야 합니다. 대신 컴포넌트 외부, Effect 내부로 이동하거나 기본값을 추출해 보세요.
+따라서 가능할 때마다 Effect의 종속성으로 객체와 함수를 사용하지 않도록 해야 합니다. 대신 컴포넌트 외부, Effect 내부로 이동하거나 원시값을 추출해 보세요.
 
 ### 정적 객체 및 함수를 컴포넌트 외부로 이동하기 
 
