--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -351,7 +351,7 @@ function ChatRoom({ roomId }) {
 ```
 
 이제 `options`가 Effect 내부에 선언되었으므로 더 이상 Effect의 종속성이 아닙니다. 대신 Effect에서 사용되는 유일한 reactive 값은 `roomId`뿐입니다. 
-`roomId`는 객체나 함수가 아니므로 _의도하지 않게_ 다르지 않을 것입니다. 자바스크립트에서 숫자와 문자열은 내용에 따라 비교됩니다:
+`roomId`는 객체나 함수가 아니므로 _의도하지 않은_ 동작이 일어나지 않을 것입니다. 자바스크립트에서 숫자와 문자열은 내용에 따라 비교됩니다:
 
 ```js 
 // 첫 렌더링 동안
