--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -394,7 +394,7 @@ function ChatRoom({ roomId }) {
   // ...
 ```
 
-Effect 내부의 논리 조각을 그룹화하기 위해 사용자 고유의 함수를 작성할 수 있습니다. Effect _내에서_ 이러한 값을 선언하는 한 reactive한 값이 아니므로 Effect의 종속성일 필요는 없습니다.
+Effect 내부의 일부 논리들을 모아서 사용자 고유의 함수를 작성할 수 있습니다. Effect _내에서_ 이러한 값을 선언하는 한 reactive한 값이 아니므로 Effect의 종속성일 필요는 없습니다.
 
 ### 객체에서 원시 값 읽기
 
