--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -481,5 +481,5 @@ function ChatRoom({ getOptions }) {
 ```
 
 이 방법은 렌더링 중에 호출해도 안전하기 때문에 [순수](https://react.dev/learn/keeping-components-pure) 함수에만 사용할 수 있습니다. 
-함수가 이벤트 핸들러이지만 변경 내용이 Effect를 다시 동기화하 않으려면 [대신 Effect 이벤트로 래핑합니다](https://react.dev/learn/removing-effect-dependencies#do-you-want-to-read-a-value-without-reacting-to-its-changes).
+함수가 이벤트 핸들러이지만 변경 내용이 Effect를 다시 동기화하 않으려면 [대신 Effect 이벤트로 감쌉니다](https://react.dev/learn/removing-effect-dependencies#do-you-want-to-read-a-value-without-reacting-to-its-changes).
 
