--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -35,7 +35,7 @@ function ChatRoom({ roomId }) {
 
 그리고 `messages`를 의존성으로 만드는 것은 문제를 야기합니다.
 
-메시지를 수신할 때마다 `setMessages()`는 수신된 메시지가 포함된 새 `messages` 배열로 구성 요소를 다시 렌더링합니다. 그러나 이제 이 Effect는 `messages`에 따라 달라지므로 
+메시지를 수신할 때마다 `setMessages()`는 수신된 메시지가 포함된 새 `messages` 배열로 컴포넌트를 다시 렌더링합니다. 그러나 이제 이 Effect는 `messages`에 따라 달라지므로 
 이 Effect도 다시 동기화됩니다. 그래서 모든 새로운 메시지는 채팅을 다시 연결하게 만들 것입니다. 사용자는 좋아하지 않을 것입니다!
 
 문제를 해결하려면 Effect 내의 `messages`를 읽지 마십시오. 대신 [업데이트 기능을 가진 함수를](https://react.dev/reference/react/useState#updating-state-based-on-the-previous-state) 
