--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -488,7 +488,7 @@ function ChatRoom({ getOptions }) {
 - 종속성은 항상 코드와 일치해야 합니다.
 - 종속성이 만족스럽지 않을 때는 코드를 편집해야 합니다.
 - 린터를 억제하면 매우 혼란스러운 버그가 발생하므로 항상 피해야 합니다.
-- 종속성을 제거하려면 링터에 의존성이 필요하지 않다는 것을 "증명"해야 합니다.
+- 종속성을 제거하려면 린터에 그 종속성이 필요하지 않다는 것을 "증명"해야 합니다.
 - 특정 상호 작용에 대한 응답으로 일부 코드를 실행해야 하는 경우 해당 코드를 이벤트 핸들러로 이동합니다.
 - 다른 이유로 Effect의 다른 부분을 다시 실행해야 하는 경우 여러 Effect로 나눕니다.
 - 이전 상태를 기준으로 일부 상태를 업데이트하려면 업데이트 함수를 전달합니다.
