--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -500,8 +500,8 @@ function ChatRoom({ getOptions }) {
 
 ## 도전1. 인터벌 제설정을 수정하기
 
-이 효과는 초당 눈금이 표시되는 인터벌을 설정합니다. 여러분은 이상한 일이 일어나는 것을 알아차렸습니다. 
-인터벌이 똑딱거릴 때마다 파괴되고 다시 생성되는 것 같습니다. 
+이 효과는 초당 눈금이 표시되는 간격을 설정합니다. 여러분은 이상한 일이 일어나는 것을 알아차렸습니다. 
+간격이 똑딱거릴 때마다 파괴되고 다시 생성되는 것 같습니다. 
 간격이 지속적으로 다시 생성되지 않도록 코드를 수정합니다.
 
 <Code src="https://codesandbox.io/s/x99ygb?file=/App.js&utm_medium=sandpack"/>
