--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -528,7 +528,7 @@ React는 다음 렌더에 적용합니다.
 
 ## 도전2. 애니메이션이 다시 재생되는 것을 고치기
 
-이 예에서 "표시"를 누르면 시작 메시지가 사라집니다. 
+이 예에서 "표시"를 누르면 환영 메시지가 사라집니다. 
 애니메이션은 몇 초 정도 걸립니다. 
 "제거"를 누르면 환영 메시지가 즉시 사라집니다. 
 페이드인 애니메이션에 대한 로직은 애니메이션.js 파일에서 플레인 JavaScript [애니메이션 루프](https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame)로 구현됩니다. 
