--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -539,7 +539,7 @@ Effect는 DOM 노드에 대한 `FadeInAnimation` 인스턴스를 만든 다음 `
 이 코드는 이미 작동하지만 변경할 사항이 있습니다. 
 현재 `duration` 상태 변수를 제어하는 슬라이더를 이동하면 애니메이션이 다시 트리거됩니다. 
 Effect가 `duration` 변수에 "반응"하지 않도록 동작을 변경합니다. 
-표시를 누르면 Effect가 슬라이더의 현재 `duration`을 사용합니다. 
+"표시"를 누르면 Effect가 슬라이더의 현재 `duration`을 사용합니다. 
 그러나 슬라이더를 움직인다고 해서 애니메이션이 다시 시작되는 것은 아닙니다.
 
 <Code src="https://codesandbox.io/s/8zzee4?file=%2FApp.js&utm_medium=sandpack"/>
